# xarray-regressions

./: CHANGELOG.md  README.md  pyproject.toml
src/xarray_regressions/: fixture.py
tests/: test_xarray_regression.py
tests/test_xarray_regression/: test_dataarray_regression_fails_with_mismatched_attrs.nc  test_dataarray_regression_with_different_ids_da1.nc  test_dataarray_regression_with_different_ids_da2.nc  test_dataarray_regression_with_tolerance.nc  test_dataset_regression_fails_with_mismatched_dims.nc  test_dataset_regression_with_tolerance.nc
