[project]
name = "xarray-regressions"
version = "0.1.0"
description = "pytest-regressions plugin for xarray"
readme = "README.md"
authors = [
    { name = "Aaron Zuspan", email = "aa.zuspan@gmail.com" }
]
classifiers = [
    "Framework :: Pytest"
]
requires-python = ">=3.10"
dependencies = [
    "netcdf4>=1.7.2",
    "pytest>=8.3.5",
    "pytest-regressions>=2.7.0",
    "xarray>=2025.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.11",
]

[project.entry-points.pytest11]
xarray-regressions = "xarray_regressions.plugin"
